# tokensolver-xyz

./: .eslintrc.js  .gitignore  DEPLOYMENT_READY.md  FINAL_MIGRATION_REPORT.md  MIGRATION_COMPLETE.md  MIGRATION_FIXES.md  PRODUCTION_CHECKLIST.md  README.md  TokenSOLver-Presentation.md  netlify-env-variables.txt  netlify.toml  package-lock.json  package.json  test-integration.html  turbo.json
.github/workflows/: ci.yml
analyzer-frontend/: app.js  enhanced-styles.css  index.html  styles.css
apps/launchpad/: .env.example  package.json
apps/launchpad/src/: server.ts
apps/launchpad/src/middleware/: attestation.ts
apps/launchpad/src/routes/: guard.ts  launch.ts
contracts/solguard-registry/: Anchor.toml  Cargo.toml
contracts/solguard-registry/src/: lib.rs
docs/: TSV-1.md
netlify/functions/: ai-agent.js  bubbles.js  chaos-engineering.js  conformal-intelligence.js  holders.js  intelligence-engine.js  liquidity.js  module-optimizer.js  resolve.js  score.js  solguard-params.js  solguard-signatures.js  threat-analysis.js
tools/scripts/: demo.js
